fix(editor): Improve editor responsiveness on smaller screens.

--- a/style.css
+++ b/style.css
@@ -14,9 +14,6 @@ body {
 
 *, *:before, *:after {
     box-sizing: inherit;
-}
-
-* {
     margin: 0;
 }
 
@@ -122,5 +119,20 @@ textarea {
 @media screen and (max-width: 800px) {
     main {
         margin: 0;
+        padding: 0 20px 35px;
+    }
+
+    textarea {
+        font-size: 18px;
+    }
+}
+
+@media screen and (max-width: 550px) {
+    main {
+        padding: 0 0 35px;
+    }
+
+    textarea {
+        font-size: 16px;
     }
 }
